# tracing-tape

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  deploy-trace-deck.yml
trace-deck/: Cargo.toml  index.html
trace-deck/src/: block.rs  lib.rs  main.rs  state.rs  statistics.rs  timeline.rs  utils.rs
trace-deck/src/tabs/: callsites.rs  details.rs  global_timeline.rs  mod.rs  plot_span_duration.rs  tape_events.rs  tape_timeline.rs  welcome.rs
tracing-tape/: Cargo.toml
tracing-tape-parser/: Cargo.toml
tracing-tape-parser/examples/: parse.rs
tracing-tape-parser/src/: lib.rs
tracing-tape-recorder/: Cargo.toml
tracing-tape-recorder/benches/: recorder.rs
tracing-tape-recorder/examples/: basic_usage.rs  fib_client.rs  fib_server.rs  multiple_threads.rs  shave_yaks.rs
tracing-tape-recorder/src/: lib.rs  old.rs
tracing-tape/benches/: recorder.rs
tracing-tape/src/: file_format.rs  intro.rs  lib.rs
tracing-tape/src/record/: callsite.rs  event.rs  mod.rs  span.rs
