[package]
name = "trace-deck"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "GUI for visualizing and analyzing tracing tape files"
readme = "../README.md"
homepage = "https://trace-deck.oehrl.dev"
repository = "https://github.com/soehrl/tracing-tape"
license = "MIT/Apache-2.0"
keywords = ["tracing", "tape", "gui", "debug"]

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.17", features = ["derive"] }
crossbeam-channel = "0.5.13"
eframe = "0.33.3"
egui = "0.33.3"
egui_dock = "0.18.0"
egui_extras = "0.33.3"
egui_plot = "0.34.0"
petgraph = "0.6.5"
postcard = "1.0.10"
rayon = "1.10.0"
time = { version = "0.3.36", features = ["formatting", "macros"] }
tracing-tape-parser.workspace = true
zerocopy = "0.7.35"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" 
getrandom = { version = "0.3", features = ["wasm_js"] }
