[package]
name = "tracing-tape-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Parser for the tracing-tape format"
readme = "../README.md"
homepage = "https://github.com/soehrl/tracing-tape"
repository = "https://github.com/soehrl/tracing-tape"
license = "MIT/Apache-2.0"
keywords = ["tracing", "parser"]

[dependencies]
ahash = "0.8.11"
smallvec = "1.13.2"
petgraph = "0.6.5"
tracing.workspace = true
tracing-tape.workspace = true
zerocopy.workspace = true
