[package]
name = "tracing-tape-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
smallvec = "1.13.2"
time = "0.3.36"
tracing.workspace = true
tracing-subscriber = "0.3.18"
tracing-tape = { path = "../tracing-tape" }
zerocopy = "0.7.35"

[dev-dependencies]
criterion.workspace = true
tempfile = "3.12.0"

[[bench]]
name = "recorder"
harness = false
