[package]
name = "tracing-tape-recorder"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Tracing subscriber layer for the tracing-tape format"
readme = "../README.md"
homepage = "https://github.com/soehrl/tracing-tape"
repository = "https://github.com/soehrl/tracing-tape"
license = "MIT/Apache-2.0"
keywords = ["tracing", "recorder"]

[dependencies]
ahash = "0.8.11"
smallvec = "1.13.2"
time = "0.3.36"
tracing.workspace = true
tracing-subscriber = "0.3.18"
tracing-tape.workspace = true
zerocopy.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3.12.0"

[[bench]]
name = "recorder"
harness = false
