[package]
name = "tracing-tape"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
smallvec = { version = "1.13.2", features = ["serde"] }
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros", "parsing"] }
tracing.workspace = true
zerocopy = { version = "0.7.35", features = ["derive"] }
