[package]
name = "tracing-tape"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Binary format specification for the tracing crate"
readme = "../README.md"
homepage = "https://github.com/soehrl/tracing-tape"
repository = "https://github.com/soehrl/tracing-tape"
license = "MIT/Apache-2.0"
keywords = ["tracing", "format", "binary"]

[dependencies]
ahash = "0.8.11"
smallvec = { version = "1.13.2", features = ["serde"] }
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros", "parsing"] }
tracing.workspace = true
zerocopy = { version = "0.7.35", features = ["derive"] }
